<resources>
    <string name="app_name">Data Binding Exercise</string>
    <string name="button_update">Update</string>
    <string name="button_next_activity">Next Activity</string>
    <string name="edittext_first_name_hint">First Name</string>
    <string name="edittext_last_name_hint">Last Name</string>
    <string name="button_no_of_clicks">No of Clicks</string>
    <string name="edittext_age_hint">Update age automatically</string>
    <string name="radio_button_female">Female</string>
    <string name="radio_button_male">Male</string>
    <string name="radio_label">Select Gender</string>
</resources>
