<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.ashutoshtiwari.databindingexercise.User" />

        <import type="com.example.ashutoshtiwari.databindingexercise.Handler" />

        <import type="android.view.View" />

        <variable
            name="user"
            type="User" />

        <variable
            name="handler"
            type="Handler" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        tools:context="com.example.ashutoshtiwari.databindingexercise.MainActivity">

        <TextView
            android:id="@+id/textview_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@{user.firstname}"
            tools:text="First Name" />

        <TextView
            android:id="@+id/textview_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_firstname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@{user.lastname}"
            tools:text="Last Name" />

        <TextView
            android:id="@+id/textview_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_lastname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@{user.age}"
            tools:text="Age" />

        <EditText
            android:id="@+id/edittext_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_age"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/edittext_first_name_hint" />

        <EditText
            android:id="@+id/edittext_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edittext_firstname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/edittext_last_name_hint" />

        <EditText
            android:id="@+id/edittext_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edittext_lastname"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/edittext_age_hint"
            android:text="@={user.age}" />

        <Button
            android:id="@+id/button_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edittext_age"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/button_update" />

        <Button
            android:id="@+id/button_next_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_update"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/button_next_activity" />

        <Button
            android:id="@+id/button_no_of_clicks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_next_activity"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:onClick="@{(view) -> handler.onClick(view)}"
            android:tag="0"
            android:text="@string/button_no_of_clicks" />
    </RelativeLayout>
</layout>

